# The-Repo-Depot

./: .gitignore  CONTRIBUTING.md  LEARNING.md  LICENSE  README.md  TEACHING_PROCEDURE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  cd.yml  ci.yml  lint.yml  security.yml
config/: README.md
requirements/: base.txt  min.txt  pinned.txt
src/example_package/: __init__.py  logic.py  module_other_violations.py  module_with_issues.py
tests/: conftest.py  test_integration.py  test_logic.py
