# =============================================================================
# Project metadata and tool configuration (PEP 517/621)
# =============================================================================
# This file defines the package (name, version, deps), build system, and
# tool configs (Ruff, pytest, mypy). Used by pip, build, and the CI workflows.
# =============================================================================

[build-system]
# -----------------------------------------------------------------------------
# Build backend: setuptools with PEP 517. "build" and "pip install ." use this.
# requires: packages needed to build; build-backend: module that performs build.
# -----------------------------------------------------------------------------
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-ruff-demo"
version = "0.1.0"
description = "CI/CD demo with Ruff linting and matrix deployment"
readme = "README.md"
requires-python = ">=3.9"
# dependencies: empty because this is a demo; add your package deps here.
dependencies = []

[project.optional-dependencies]
# min: minimum versions for compatibility (used in CD matrix "min" dependency-set)
min = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
# pinned: exact versions for reproducible builds (used in CD matrix "pinned")
pinned = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "ruff==0.4.4",
    "mypy==1.8.0",
]

# -----------------------------------------------------------------------------
# Ruff: linter and formatter configuration
# -----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
# where: source layout; packages are discovered under src/ (e.g. example_package).

[tool.ruff]
target-version = "py310"
line-length = 88
# exclude: directories/files Ruff should not analyze (noise or generated code)
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "**/module_other_violations.py",  # optional Stage 2 demo; remove to show F401, N802, etc.
]

[tool.ruff.lint]
# select: rule categories or codes to enable. We enable:
#   E4/E7/E9: pycodestyle (syntax/effect/runtime)
#   F: Pyflakes (unused import, redefined, etc.)
#   N8: pep8-naming (function/variable naming)
#   B018/B019: useless expression/type annotation
#   ERA001: commented-out code
#   PLR0915: too many statements (function length proxy)
select = [
    "E4",      # pycodestyle: syntax errors
    "E7",      # pycodestyle: statement has no effect
    "E9",      # pycodestyle: runtime errors
    "F",       # Pyflakes (F401 unused import, F811 redefined, etc.)
    "N8",      # pep8-naming (N802 invalid function name, N806 variable, etc.)
    "B018",    # useless expression (e.g. function call in statement position)
    "B019",    # useless type annotation (typing.NoReturn, etc.)
    "ERA001",  # commented-out code
    "PLR0915", # too many statements
]
ignore = []

[tool.ruff.lint.pylint]
# max-statements: threshold for PLR0915 (too-many-statements). 25 matches "~25 lines" intent.
max-statements = 25

# -----------------------------------------------------------------------------
# Pytest: test discovery, paths, and markers (for configurable test profiles)
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Markers: use -m unit, -m integration, or run all (no -m). See config/test-profile.txt and CI workflow.
markers = [
    "unit: fast, isolated tests (no I/O or external deps). Default for quick CI.",
    "integration: tests that import the package, run code paths, or touch multiple units.",
]
# pythonpath: prepend src/ so "import example_package" works when running pytest from repo root.

# -----------------------------------------------------------------------------
# Mypy: static type checking (used in CI typecheck job)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
# disallow_untyped_defs: set true to require type annotations on all functions (stricter).

[[tool.mypy.overrides]]
# Tests can be less strict (e.g. untyped fixtures). Override per-directory if needed.
module = "tests.*"
disallow_untyped_defs = false
